--- a/src/webui/src/app/app.component.html
+++ b/src/webui/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div style="...">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-</div>
-<router-outlet>
-
-</router-outlet>
+<router-outlet></router-outlet>
