--- a/src/webui/src/app/pages/project/project.component.html
+++ b/src/webui/src/app/pages/project/project.component.html
@@ -1,3 +1,22 @@
 <div class="content-wrapper">
-  Projects
+
+<ngx-datatable
+    class="bootstrap"
+    [rows]="rows"
+    [columns] ="cols"
+    [columnMode]="'force'"
+    [headerHeight]="50"
+    [footerHeight]="50"
+    [rowHeight]="'auto'"
+    [externalPaging]="true"
+    [count]="page.totalElements"
+    [offset]="page.number"
+    [limit]="page.size"
+    (page)='setPage($event)'
+  >
+  </ngx-datatable>
+
+
+
+
 </div>
