Ng translate deneme

--- a/src/webui/src/app/pages/project/project.component.html
+++ b/src/webui/src/app/pages/project/project.component.html
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-
+<h3>{{'Project List' | translate}}</h3>
 <ngx-datatable
     class="bootstrap"
     [rows]="rows"
@@ -10,7 +10,7 @@
     [rowHeight]="'auto'"
     [externalPaging]="true"
     [count]="page.totalElements"
-    [offset]="page.number"
+    [offset]="page.page"
     [limit]="page.size"
     (page)='setPage($event)'
   >
