--- a/src/webui/src/app/pages/project/project.component.html
+++ b/src/webui/src/app/pages/project/project.component.html
@@ -1,5 +1,13 @@
 <div class="content-wrapper">
-<h3>{{'Project List' | translate}}</h3>
+
+  <div class="row">
+    <div class="col-sm-4"><h3>   {{ 'Project List' | translate }} </h3></div>
+    <div class="col-sm-7"></div>
+    <div class="col-sm-1">
+      <button type="button" class="btn btn-primary" (click)="openModal(template)"> {{'Project Add' | translate}}</button>
+    </div>
+  </div>
+
 <ngx-datatable
     class="bootstrap"
     [rows]="rows"
@@ -16,6 +24,20 @@
   >
   </ngx-datatable>
 
+  <ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">{{ 'Project Edit Screen' | translate }}</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      This is a modal.
+    </div>
+    <div class="modal-footer">
+      Footer
+    </div>
+  </ng-template>
 
 
 
