Shared modülünde heryerde kullanmak için confirm coponent oluşturudur. slide barda banka modülü kaldırıldı

--- a/src/webui/src/app/_layout/sidebar/sidebar.component.html
+++ b/src/webui/src/app/_layout/sidebar/sidebar.component.html
@@ -41,7 +41,7 @@
         </ul>
       </li>
 
-      <li [ngClass]="{'open': showMenu === 'issue'}">
+   <!--   <li [ngClass]="{'open': showMenu === 'issue'}">
         <a (click)="addExpandClass('issue')" title="Issue">
           <span class="nav-icon material-icons">supervisor_account</span> Banka Modülü
           <span class="toogle-sub-nav material-icons">keyboard_arrow_right</span></a>
@@ -53,7 +53,7 @@
           </li>
         </ul>
       </li>
-
+      -->
 
     </ul>
 
